[package]
name = "seaborg"
version = "0.1.0"
authors = ["Remi Petitjean <remi.petitjean@gmail.com>"]
edition = "2018"
description = "Dataframe package"
license = "MIT"
documentation = "http://www.seaborg.rs"
homepage = "http://www.seaborg.rs"
repository = "https://github.com/remipetitjean/seaborg"

[dependencies]
